update safe get with pubkey and sig
